// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Get a free hosted Postgres database in seconds: `npx create-db`

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

// ------------------------------------------------------------------
// ENUMS
// ------------------------------------------------------------------

enum StatusFormacao {
  CONCLUIDO
  CURSANDO
  INCOMPLETO
}

enum NivelFluencia {
  BASICO
  INTERMEDIARIO
  AVANCADO
  FLUENTE
  NATIVO
}

// ------------------------------------------------------------------
// MODELS
// ------------------------------------------------------------------

model TbCadastro {
  id                   Int       @id @default(autoincrement())
  cpf                  String    @unique
  nome                 String
  data_nascimento      DateTime
  qtde_filhos          Int?      @default(0)
  estado_civil         String?
  nacionalidade        String?
  logradouro           String?
  numero               String?
  bairro               String?
  cidade               String?
  uf                   String?
  cep                  String?
  telefone             String?
  email                String    @unique
  resumoprofissional   String?   @db.Text
  objetivoprofissional String?   @db.Text

  // Relacionamentos
  links                TbLinks[]
  experiencias         TbExperienciaProf[]
  formacoes            TbFormacao[] 
  idiomas              TbIdiomas[] 
  ferramentas          TbFerramentas[]

  @@map("tbcadastro")
}

model TbLinks {
  id     Int          @id @default(autoincrement())
  nome   String
  link   String
  idpessoa Int 

  // Relacionamentos
  pessoas TbCadastro @relation(fields: [idpessoa], references: [id], onDelete: Cascade)

  @@map("tblinks")
}

model TbExperienciaProf {
  id             Int       @id @default(autoincrement())
  idpessoa       Int
  razaosocial    String
  cidade         String?
  uf             String?
  datainicio     DateTime
  datafim        DateTime? // Opcional (pode ser o emprego atual)
  cargo          String
  descricaocargo String    @db.Text

  pessoa         TbCadastro @relation(fields: [idpessoa], references: [id], onDelete: Cascade)

  @@map("tbexperiencia_prof")
}

model TbFormacao {
  id          Int            @id @default(autoincrement())
  idpessoa    Int            // Adicionado para vincular ao cadastro
  nomecurso   String
  instituicao String
  status      StatusFormacao
  datainicio  DateTime?
  datafim     DateTime?
  cidade      String?
  estado      String?

  pessoa      TbCadastro     @relation(fields: [idpessoa], references: [id], onDelete: Cascade)

  @@map("tbformacao")
}

model TbHabilidades {
  id          Int             @id @default(autoincrement())
  nome        String

  ferramentas  TbFerramentas[]

  @@map("tbhabilidades")
}

model TbFerramentas {
  id             Int           @id @default(autoincrement())
  idhabilidade   Int
  idpessoa       Int
  nomeferramenta String

  habilidade     TbHabilidades @relation(fields: [idhabilidade], references: [id], onDelete: Cascade)
  pessoa         TbCadastro   @relation(fields: [idpessoa], references:[id])

  @@map("tbferramentas")
}


model TbIdiomas {
  id       Int           @id @default(autoincrement())
  idpessoa Int           // Adicionado para vincular ao cadastro
  idioma   String
  fluencia NivelFluencia

  pessoa   TbCadastro    @relation(fields: [idpessoa], references: [id], onDelete: Cascade)

  @@map("tbidiomas")
}