erDiagram
    TbCadastro {
        Int id PK
        String cpf UK
        String nome
        DateTime data_nascimento
        Int qtde_filhos
        String estado_civil
        String nacionalidade
        String logradouro
        String numero
        String bairro
        String cidade
        String uf
        String cep
        String telefone
        String email UK
        Text resumoprofissional
        Text objetivoprofissional
    }

    TbLinks {
        Int id PK
        String nome
        String link
    }

    TbRelLinks {
        Int id PK
        Int idpessoa FK
        Int idlink FK
    }

    TbExperienciaProf {
        Int id PK
        Int idpessoa FK
        String razaosocial
        String cidade
        String uf
        DateTime datainicio
        DateTime datafim
        String cargo
        Text descricaocargo
    }

    TbFormacao {
        Int id PK
        Int idpessoa FK
        String nomecurso
        String instituicao
        StatusFormacao status
        DateTime datainicio
        DateTime datafim
        String cidade
        String estado
    }

    TbHabilidades {
        Int id PK
        String nome
    }

    TbFerramentas {
        Int id PK
        Int idhabilidade FK
        Int idpessoa FK
        String nomeferramenta
    }

    TbIdiomas {
        Int id PK
        Int idpessoa FK
        String idioma
        NivelFluencia fluencia
    }

    %% Relacionamentos (1:N)
    TbCadastro ||--o{ TbRelLinks : "possui links"
    TbLinks ||--o{ TbRelLinks : "referenciado por"
    
    TbCadastro ||--o{ TbExperienciaProf : "possui experiencias"
    TbCadastro ||--o{ TbFormacao : "possui formacoes"
    TbCadastro ||--o{ TbIdiomas : "possui idiomas"
    TbCadastro ||--o{ TbFerramentas : "possui ferramentas"
    
    TbHabilidades ||--o{ TbFerramentas : "agrupa ferramentas"